        - MediaType.parameters property is now unmodifiable. Initial
          issue reported by Nicolas Rinaudo. 
        - Added static Series#unmodifiableSeries() method.
        - Added DateUtils.format(Date) method which uses HTTP default
          format.
        - Added a proposal "org.restlet.security" package with a
          potential replacement for current Guard mechanism. This is
          an alpha level package not intended for Restlet users yey.		 
     - Misc
        - JAX-RS extension:
            - added class ExendedUriBuilder with "file" extensions for
              content negotiation and an ExtendedUriInfo to get it.
            - Supports per-request-providers now.
            - JaxRsApplication will not clear the MetadataService (as
              before; was required to not use other extensions as given
              in the JAX-RS ApplicationConfig class).
        - The Directory class doesn't override the findTarget() method
          but uses the defaut Finder mechanism based on the 
          "targetClass" property. Therefore, it is easier to specify a
          subclass of org.restlet.engine.local.DirectoryResource in
          order to customize the default behavior. 
          Suggested by Cliff Binstock.
        - Upgraded db4o to version 7.7.67.
		  - Upgraded Grizzly to version 1.9.0.
		- Refactored engine support for the StatusService. Removed
		  ApplicationStatusFilter and ComponentStatusFilter.
		- Extracted all internal classes of ByteUtils into the new
		  org.restlet.engine.io package for easier reuse and 
		  maintenance.
		- Clarified Javadocs in Reference#getPath() methods.
        - Fixed potential NPE in Reference#decode() method.
        - Clarified Javadocs in FileRepresentation and methods 
          Representation#getDownloadName(), setDownloadName() in order
          to explain that setDownloadable(true) must be called first.
          Issue reported by Kevin Conaway.