@@ -36,6 +36,7 @@ Import-Package: javax.servlet,
  org.springframework.beans.factory.config,
  org.springframework.beans.factory.support,
  org.springframework.beans.factory.xml,
+ org.springframework.context,
  org.springframework.context.support,
  org.springframework.core.io,
  org.springframework.web.context,
